Modification du code avec l'utilisation de ui-router

--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -33,7 +33,7 @@
                     Vélos disponibles:
                   </li>
                 </ul>
-                <a data-ng-href="/detail-station/{{ station.number }}" class="btn btn-primary detailVelib">Détail</a>
+                <a data-ui-sref="detail-station({ id: station.number })" class="btn btn-primary detailVelib">Détail</a>
               </div>
             </div>
           </div>
