--- a/app/views/directives/paginator.html
+++ b/app/views/directives/paginator.html
@@ -1,9 +1,11 @@
 <div class="paginated">
 	<button ng-disabled="isFirstPage()" ng-click="firstPage()" class="btn btn-default first">&laquo;</button>
 	<button ng-disabled="isFirstPage()" ng-click="decPage()" class="btn btn-default previous">&lsaquo;</button>
-    {{paginator.currentPage+1}}/{{numberOfPages()}}
+    <span class="page">{{paginator.currentPage+1}}/{{numberOfPages()}}</span>
     <button ng-disabled="isLastPage()" ng-click="incPage()" class="btn btn-default next">&rsaquo;</button>
     <button ng-disabled="isLastPage()" ng-click="lastPage()" class="btn btn-default last">&raquo;</button><br/>
 </div>
-<span>Nombre d'item par page</span>
-    <select ng-model="paginator.pageSize" ng-options="size for size in pageSizeList" class="form-control nbItems"></select>
+<div class="pageSize">
+	<span>Nombre d'item par page</span>
+	<select ng-model="paginator.pageSize" ng-options="size for size in pageSizeList" class="form-control nbItems"></select>
+</div>
