--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -39,7 +39,9 @@
           </div>
         </div>
       </tab>
-      <tab heading="Lignes de bus"></tab>
+      <tab heading="Lignes de bus">
+        Retrouvez très bientôt les ligne de bus de la Star de Rennes !!
+      </tab>
     </tabset>
   </div>
 </div>
