modif wording + css

--- a/app/views/directives/paginator.html
+++ b/app/views/directives/paginator.html
@@ -6,6 +6,6 @@
     <button ng-disabled="isLastPage()" ng-click="lastPage()" class="btn btn-default last">&raquo;</button><br/>
 </div>
 <div class="pageSize">
-	<span>Nombre d'item par page</span>
+	<span>Nombre de stations par page</span>
 	<select ng-model="paginator.pageSize" ng-options="size for size in pageSizeList" class="form-control nbItems"></select>
 </div>
