--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,47 +1,41 @@
-<div class="container">
-  <div class="jumbotron">
-    <h1>StarAngularJS</h1>
-    <p class="message">{{vm.welcomeMessage}}</p>
-  </div>
-  <div class="listeContent">
-    <tabset vertical="true" type="pills">
-      <tab heading="Liste des stations de vélos" >
-        <custom-loader></custom-loader>
-        <div class="row">
-          <div class="searchBlock">
-            <input type="text" ng-model="search" ng-change="firstPage()" class="search-query form-control" placeholder="Rechercher une station ...">
-            <span paginator items="stations | filter:search"></span>
-          </div>
-          <div class="stationVelib col-sm-4 col-xs-12" data-ng-repeat="station in pageItems()">
-            <div class="thumbnail velib">
-              <!-- <img data-src="#" alt="{{ station.name }}" /> -->
-              <div class="caption">
-                <h3 class="name">{{ station.name }}</h3>
+<div class="listeContent">
+  <tabset vertical="true" type="pills">
+    <tab heading="Liste des stations de vélos" >
+      <custom-loader></custom-loader>
+      <div class="row">
+        <div class="searchBlock">
+          <input type="text" ng-model="search" ng-change="firstPage()" class="search-query form-control" placeholder="Rechercher une station ...">
+          <span paginator items="stations | filter:search"></span>
+        </div>
+        <div class="stationVelib col-sm-4 col-xs-12" data-ng-repeat="station in pageItems()">
+          <div class="thumbnail velib">
+            <!-- <img data-src="#" alt="{{ station.name }}" /> -->
+            <div class="caption">
+              <h3 class="name">{{ ::station.name }}</h3>
+            </div>
+            <div class="bottom">
+              <div class="positionnement">
+                <div class="district">{{ ::station.district }}</div>
+                <div class="adresse">{{ ::station.address }}</div>
               </div>
-              <div class="bottom">
-                <div class="positionnement">
-                  <div class="district">{{ station.district }}</div>
-                  <div class="adresse">{{ station.address }}</div>
-                </div>
-                <ul class="list-group totalBikes">
-                  <li class="slotAvailable list-group-item">
-                    <span class="badge pull-right">{{ station.slotsavailable }}</span>
-                    Places disponibles:
-                  </li>
-                  <li class="bikeAvailable list-group-item">
-                    <span class="badge pull-right">{{ station.bikesavailable }}</span>
-                    Vélos disponibles:
-                  </li>
-                </ul>
-                <a data-ui-sref="detail-station({ id: station.number })" class="btn btn-primary detailVelib">Détail</a>
-              </div>
+              <ul class="list-group totalBikes">
+                <li class="slotAvailable list-group-item">
+                  <span class="badge pull-right">{{ ::station.slotsavailable }}</span>
+                  Places disponibles:
+                </li>
+                <li class="bikeAvailable list-group-item">
+                  <span class="badge pull-right">{{ ::station.bikesavailable }}</span>
+                  Vélos disponibles:
+                </li>
+              </ul>
+              <a data-ui-sref="detail-station({ id: station.number })" class="btn btn-primary detailVelib">Détail</a>
             </div>
           </div>
         </div>
-      </tab>
-      <tab heading="Lignes de bus">
-        Retrouvez très bientôt les ligne de bus de la Star de Rennes !!
-      </tab>
-    </tabset>
-  </div>
+      </div>
+    </tab>
+    <tab heading="Lignes de bus">
+      Retrouvez très bientôt les ligne de bus de la Star de Rennes !!
+    </tab>
+  </tabset>
 </div>
