--- a/app/views/detail_station.html
+++ b/app/views/detail_station.html
@@ -1,1 +1,21 @@
-test
+<div class="detailStation">
+	<div class="caption">
+		<h3 class="name">{{ ::detailStation.name }}</h3>
+	</div>
+	<div class="bottom">
+		<div class="positionnement">
+			<div class="district">{{ ::detailStation.district }}</div>
+			<div class="adresse">{{ ::detailStation.address }}</div>
+		</div>
+		<ul class="list-group totalBikes">
+		<li class="slotAvailable list-group-item">
+		  <span class="badge pull-right">{{ ::detailStation.slotsavailable }}</span>
+		  Places disponibles:
+		</li>
+		<li class="bikeAvailable list-group-item">
+		  <span class="badge pull-right">{{ ::detailStation.bikesavailable }}</span>
+		  Vélos disponibles:
+		</li>
+		</ul>
+	</div>
+</div>
