--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -9,6 +9,8 @@
         </div>
         <div class="stationVelib col-sm-4 col-xs-12" data-ng-repeat="station in pageItems()">
           <div class="thumbnail velib">
+            <div class="closedStation" ng-hide="{{station.state}}"></div>
+            <alert class="popinAlert" type="danger" ng-hide="{{station.state}}">Cette station est acutellement fermée.</alert>
             <!-- <img data-src="#" alt="{{ station.name }}" /> -->
             <div class="caption">
               <h3 class="name">{{ ::station.name }}</h3>
