--- a/app/views/detail_station.html
+++ b/app/views/detail_station.html
@@ -1,3 +1,4 @@
+<a class="btn btn-default" data-ui-sref="accueil">Accueil</a>
 <custom-loader></custom-loader>
 <div class="detailStation">
 	<div class="caption">
