--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,8 +89,9 @@ body {
 	.popinAlert {
 		z-index: 1000;
 		position: absolute;
-		bottom: -10px;
-		left: 9px;
+		top: 81%;
+		left: 0px;
+		width: 100%;
 	}
 	
 	
@@ -174,6 +175,11 @@ body {
 
 	.adresse {
 		margin-bottom: 20px;
+	}
+
+	.nbDispos {
+		white-space: nowrap;
+		color: black;
 	}
   }
 
