--- a/app/views/detail_station.html
+++ b/app/views/detail_station.html
@@ -1,4 +1,5 @@
 <a class="btn btn-default" data-ui-sref="accueil">Accueil</a>
+<a class="btn btn-default" data-ui-sref="velib-stations">Retour à la liste des stations velib</a>
 <custom-loader></custom-loader>
 <div class="detailStation">
 	<div class="caption">
