affichage des icones des lignes de bus

--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,2 +1,2 @@
 <a data-ui-sref="velib-stations" class="btn btn-primary velib_stations">Liste des stations velib</a>
-<a data-ui-sref="bus-stations" class="btn btn-primary bus_stations">Liste des stations de bus</a>
+<a data-ui-sref="bus-lines" class="btn btn-primary bus_lines">Liste des lignes de bus</a>
