integration de google maps

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -200,6 +200,13 @@ body {
 			margin-left: 5px;
 		}
 	}
+
+	.map {
+	  height: 400px;
+	  width: 100%;
+	  margin: auto;
+	  margin-bottom: 50px;
+	}
   }
 
 }
