ajout geoloc html5 + itineraire google map lors de la geoloc (manque suppr ancien marqueur lors de l'affichage de l'itineraire

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -207,6 +207,12 @@ body {
 	  margin: auto;
 	  margin-bottom: 50px;
 	}
+
+	.geoloc {
+		display: block;
+		clear: both;
+		margin-bottom: 15px;
+	}
   }
 
 }
