--- a/app/views/detail_station.html
+++ b/app/views/detail_station.html
@@ -25,4 +25,11 @@
 	<button ng-click="geolocalize()" class="btn btn-default geoloc">Géolocalisation</button>
 	<!-- Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting google maps -->
 	<div id="map_canvas" ui-map="map" class="map" ui-options="options"></div>
+	<div class="instructions" ng-repeat="instruction in instructions">
+		<div class="instruction">
+			{{ ::instruction.distance }}
+			{{ ::instruction.duration }}
+			<div ng-bind-html="instruction.instruction"></div>
+		</div>
+	</div>
 </div>
