--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,6 +26,10 @@ body {
 	   margin-top: -32px; /* -1 * image height / 2 */
 	   display: block;
 	}
+	
+	.nearStation {
+		float: right;
+	}
 
   .listeContent {
 
