--- a/app/views/velib_stations.html
+++ b/app/views/velib_stations.html
@@ -1,4 +1,5 @@
 <a class="btn btn-default" data-ui-sref="accueil">Accueil</a>
+<button ng-click="findNearStation()" class="btn btn-default nearStation">Station la plus proche</button>
 <div class="listeContent">
   <custom-loader></custom-loader>
   <div class="row">
