design message no result

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -160,6 +160,13 @@ body {
 				}
 			}
 		}
+		
+		.no_result {
+			text-align: center;
+			font-size: 18px;
+			margin-top: 40px;
+			color: red;
+		}
 	}
   }
 
